# NAVLens

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-ci.yml  rust-ci.yml
crates/navlens-application/: Cargo.toml
crates/navlens-application/src/: error.rs  lib.rs
crates/navlens-application/src/align_holdings_prices/: candidate.rs  error.rs  gap.rs  matcher.rs  mod.rs  policy.rs  report.rs
crates/navlens-application/src/calculate_return_contribution/: calculate.rs  component.rs  error.rs  gap.rs  mod.rs  result.rs
crates/navlens-application/src/estimate_portfolio_return/: command.rs  execute.rs  mod.rs  result.rs
crates/navlens-application/src/reconcile_fund_return/: calculate.rs  error.rs  mod.rs  result.rs
crates/navlens-application/tests/: align_holdings_prices.rs  align_holdings_prices_matcher.rs  calculate_return_contribution.rs  public_api.rs  reconcile_fund_return.rs
crates/navlens-application/tests/align_holdings_prices_matcher/: coverage.rs  fixtures.rs  gaps.rs  validation.rs
crates/navlens-application/tests/calculate_return_contribution/: coverage.rs  errors.rs  fixtures.rs  ordering.rs
crates/navlens-backtest/: Cargo.toml
crates/navlens-backtest/src/: error.rs  evaluate.rs  lib.rs  metrics.rs  observation.rs  series.rs
crates/navlens-backtest/tests/: public_api.rs
crates/navlens-calendar/: Cargo.toml
crates/navlens-calendar/src/: error.rs  lib.rs  market_calendar.rs  market_date.rs  session.rs
crates/navlens-calendar/src/pricing/: calculation.rs  dated_decimal_return.rs  error.rs  mod.rs  period_decimal_return.rs  price_observation.rs  price_series.rs  return_period.rs  security_price.rs  security_price_series.rs  validation.rs
crates/navlens-calendar/tests/: pricing.rs  public_api.rs  security_price_series.rs  security_pricing.rs
crates/navlens-calendar/tests/fixtures/: prices.csv
crates/navlens-cli/: Cargo.toml
crates/navlens-cli/src/: command.rs  estimate.rs  main.rs
crates/navlens-cli/tests/: cli.rs
crates/navlens-core/: Cargo.toml
crates/navlens-core/src/: confidence_level.rs  currency_code.rs  decimal_return.rs  error.rs  expense_rate.rs  fund_id.rs  lib.rs  (+2 more)
crates/navlens-prediction/: Cargo.toml
crates/navlens-prediction/src/: error.rs  lib.rs  model_descriptor.rs  request.rs  return_prediction.rs  utc_timestamp.rs
crates/navlens-prediction/tests/: public_api.rs
crates/navlens-python/: Cargo.toml
crates/navlens-python/src/: align_holdings_prices.rs  alignment_policy.rs  asset_class.rs  backtest_metrics.rs  backtest_observation.rs  calculate_return_contribution.rs  component_contribution.rs  coverage_gap_reason.rs  covered_holding_price.rs  currency_code.rs  dated_decimal_return.rs  error.rs  estimate_portfolio.rs  evaluate_backtest.rs  fund_return_reconciliation.rs  fund_return_reconciliation_result.rs  holding_position.rs  lib.rs  market_date.rs  model_descriptor.rs  period_decimal_return.rs  portfolio_component_contribution.rs  portfolio_coverage_report.rs  portfolio_return_contribution.rs  portfolio_return_estimate.rs  prediction_request.rs  price_adjustment.rs  price_observation.rs  price_returns.rs  reconcile_fund_return.rs  return_contribution_result.rs  return_coverage_gap.rs  return_coverage_gap_reason.rs  return_period.rs  return_prediction.rs  security_price_history_candidate.rs  security_price_observation.rs  security_price_series.rs  uncovered_holding.rs  unit_price.rs  (+1 more)
data/: README.md
docs/: ARCHITECTURE.md  BACKTESTING.md  CLI.md  CODE_STRUCTURE.md  DATA_PIPELINE.md  DATA_SOURCE_FEASIBILITY.md  PREDICTIONS.md  PREDICTION_MODELS.md  PYTHON_BINDINGS.md  RUN_MANIFESTS.md  TEFAS_DATA_ACCESS.md
docs/adr/: 0000-template.md  0001-calendar-sources-and-session-model.md  0002-prediction-contract-ownership.md  0003-python-native-extension-boundary.md  0004-price-series-and-return-ownership.md  0005-python-csv-source-dataset-boundary.md  0006-tefas-data-access.md  0007-backtest-run-manifests.md  0008-keyless-holdings-source-boundary.md  0009-security-price-boundary.md  0010-holdings-security-price-alignment.md  0011-aligned-portfolio-return-contribution.md  0012-fund-return-contribution-reconciliation.md
python/navlens/: __init__.py  _native.pyi
python/tests/: conftest.py  test_align_holdings_prices.py  test_alignment_cli.py  test_alignment_request.py  test_backtest_binding.py  test_calculate_price_period_returns.py  test_calculate_return_contribution.py  test_csv_holdings_source.py  test_csv_price_source.py  test_fund_return_dataset.py  test_fund_return_reconciliation_bindings.py  test_fund_unit_price_snapshots.py  test_holding_binding.py  test_holding_snapshots.py  test_linear_baseline.py  test_model_comparison.py  test_naive_baselines.py  test_native.py  test_point_in_time_alignment.py  test_point_in_time_return_contribution.py  test_prediction_contract.py  test_price_returns.py  test_return_contribution_cli.py  test_return_contribution_formatting.py  test_return_period_bindings.py  test_run_manifests.py  test_security_price_bindings.py  test_security_price_csv_source.py  test_security_price_snapshots.py  test_tefas_acquisition.py  test_tefas_backtest_cli.py  test_tefas_batch.py  test_tefas_batch_arguments.py  test_tefas_cli.py  test_tefas_http_client.py  test_tefas_parser.py  test_tefas_return_dataset.py  test_tefas_source_contracts.py  test_walk_forward.py
(+105 files in other folders)
