[workspace]
members = [
    "crates/navlens-application",
    "crates/navlens-core",
    "crates/navlens-backtest",
    "crates/navlens-calendar",
    "crates/navlens-cli",
    "crates/navlens-prediction",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/navlens/navlens"
rust-version = "1.88"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
