[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "navlens"
dynamic = ["version"]
description = "Explainable investment-fund return research powered by Rust and Python"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "NAVLens contributors" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[project.scripts]
navlens-backtest-tefas = "navlens.evaluation.tefas_cli:main"
navlens-backtest-batch = "navlens.evaluation.tefas_batch_cli:main"
navlens-fetch-tefas = "navlens.sources.tefas.cli:main"

[project.optional-dependencies]
dev = [
    "maturin>=1.9,<2",
    "pytest>=8.4,<10",
    "ruff>=0.12,<1",
]
research = [
    "numpy>=2.0,<3",
    "pandas>=2.2,<4",
    "scikit-learn>=1.6,<2",
]

[tool.maturin]
manifest-path = "crates/navlens-python/Cargo.toml"
python-source = "python"
module-name = "navlens._native"
bindings = "pyo3"
features = ["extension-module"]
locked = true

[tool.pytest.ini_options]
testpaths = ["python/tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
