[package]
name = "navlens-application"
description = "Application use cases and ports for NAVLens"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
navlens-core = { path = "../navlens-core" }
navlens-calendar = { path = "../navlens-calendar" }

[lints]
workspace = true

