[package]
name = "navlens-backtest"
description = "Time-series backtesting metrics for NAVLens"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
navlens-core = { path = "../navlens-core" }

[lints]
workspace = true

