[package]
name = "navlens-python"
description = "PyO3 adapter for NAVLens Rust application and domain contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
navlens-application = { path = "../navlens-application" }
navlens-backtest = { path = "../navlens-backtest" }
navlens-calendar = { path = "../navlens-calendar" }
navlens-core = { path = "../navlens-core" }
navlens-prediction = { path = "../navlens-prediction" }
pyo3 = { version = "0.29.0", features = ["abi3-py311"] }

[lints]
workspace = true
